<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/forch_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/forch_url_hint"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/register_client_webhook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_client_webhook_text"
        android:onClick="onRegisterWebhookClick"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/start_polling_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_polling_text"
        android:onClick="onStartPollingClick"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/stop_polling_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_polling_text"
        android:onClick="onStopPollingClick"/>


</LinearLayout>

